[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "data_components"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-flight.workspace = true
arrow_tools = { path = "../arrow_tools" }
async-stream.workspace = true
async-trait.workspace = true
aws-credential-types.workspace = true
aws-sdk-credential-bridge = { path = "../aws-sdk-credential-bridge" }
aws-sdk-dynamodb = { workspace = true, optional = true }
aws-smithy-async = { workspace = true, optional = true }
base64.workspace = true
bb8 = { workspace = true, optional = true }
bb8-oracle = { version = "0.3", features = ["chrono"], optional = true }
bigdecimal = { workspace = true, optional = true }
bytes.workspace = true
charset = { workspace = true, optional = true }
chrono.workspace = true
clickhouse-rs = { workspace = true, optional = true }
dataformat-json = { path = "../dataformat-json" }
datafusion.workspace = true
datafusion-datasource.workspace = true
datafusion-federation = { workspace = true }
datafusion-table-providers = { workspace = true }
db_connection_pool = { path = "../db_connection_pool" }
delta_kernel = { workspace = true, optional = true }
document_parse = { path = "../document_parse" }
duckdb = { workspace = true, features = [
    "bundled",
    "r2d2",
    "vtab",
    "vtab-arrow",
    "appender-arrow",
], optional = true }
flight_client = { path = "../flight_client" }
futures.workspace = true
git2 = { workspace = true }
globset.workspace = true
graph-rs-sdk = { workspace = true, optional = true }
graphql-parser.workspace = true
http.workspace = true
iceberg.workspace = true
iceberg-catalog-rest.workspace = true
iceberg-datafusion.workspace = true
imap = { workspace = true, optional = true }
indexmap.workspace = true
logos.workspace = true
mailparse = { workspace = true, optional = true }
object_store = { workspace = true }
opendal = "0.54"
oracle = { version = "0.6", optional = true }
rand.workspace = true
rdkafka = { workspace = true, features = ["ssl-vendored"], optional = true }
regex.workspace = true
reqwest.workspace = true
rusqlite = { workspace = true, optional = true }
s3_vectors = { path = "../s3_vectors", optional = true }
s3_vectors_metadata_filter = { path = "../s3_vectors_metadata_filter", optional = true }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
snowflake-api = { workspace = true, optional = true }
spark-connect-rs = { git = "https://github.com/spiceai/spark-connect-rs.git", rev = "8b5495f2ed6eaf8b647b09cc1504a39bdb9bbed8", features = [
    "tls",
], optional = true } # spiceai
tiberius = { workspace = true, optional = true }
token_provider = { path = "../token_provider" }
tokio.workspace = true
tokio-postgres = { workspace = true, features = [
    "with-chrono-0_4",
], optional = true }
tokio-util = { workspace = true, optional = true }
tonic = { workspace = true }
tracing.workspace = true
turso = { workspace = true, optional = true }
twox-hash = { workspace = true, optional = true }
url.workspace = true
util = { path = "../util" }
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
rdkafka = { workspace = true, features = ["cmake-build"], optional = true }

[features]
bench = [] # Feature for benchmarking that exposes internal functions
clickhouse = ["dep:clickhouse-rs"]
databricks = ["delta_lake", "spark_connect"]
debezium = ["dep:rdkafka"]
default = []
delta_lake = ["dep:delta_kernel"]
duckdb = [
    "dep:duckdb",
    "db_connection_pool/duckdb",
    "datafusion-table-providers/duckdb",
    "datafusion-table-providers/duckdb-federation",
]
dynamodb = ["dep:aws-sdk-dynamodb", "dep:aws-smithy-async"]
flightsql = []
imap = ["dep:charset", "dep:imap", "dep:mailparse"]
kafka = ["dep:rdkafka"]
mongodb = ["datafusion-table-providers/mongodb"]
mssql = ["dep:tiberius", "dep:tokio-util", "dep:bb8"]
mysql = ["datafusion-table-providers/mysql"]
odbc = []
oracle = ["dep:oracle", "dep:bb8", "dep:bb8-oracle", "dep:bigdecimal"]
postgres = [
    "dep:tokio-postgres",
    "datafusion-table-providers/postgres",
    "datafusion-table-providers/postgres-federation",
]
s3_vectors = [
    "dep:s3_vectors",
    "dep:s3_vectors_metadata_filter",
    "dep:twox-hash",
]
sharepoint = ["dep:graph-rs-sdk"]
snowflake = ["dep:snowflake-api"]
spark_connect = ["dep:spark-connect-rs"]
sqlite = [
    "dep:rusqlite",
    "datafusion-table-providers/sqlite",
    "datafusion-table-providers/sqlite-federation",
]
turso = ["dep:turso"]

test_hadoop_catalog_docker = []

[dev-dependencies]
arrow = { workspace = true, features = ["prettyprint"] }
arrow-array = { workspace = true }
chrono = { workspace = true }
criterion = { version = "0.7", features = ["async_tokio", "html_reports"] }
ctor = "0.6.1"
iceberg_test_utils = { version = "0.7.0", features = ["tests"] }
insta.workspace = true
object_store = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bench]]
harness = false
name = "arrow_write"
required-features = ["bench"]

[[bench]]
harness = false
name = "object_filter"
