[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "dataformat-json"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
arrow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
datafusion.workspace = true
datafusion-datasource.workspace = true
object_store.workspace = true
snafu.workspace = true
tracing.workspace = true
