[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "datafusion-optimizer-rules"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
arrow = { optional = true, workspace = true }
chrono = { optional = true, workspace = true }
object_store = { optional = true, workspace = true }
async-stream.workspace = true
async-trait.workspace = true
cache = { path = "../cache" }
datafusion.workspace = true
datafusion-datasource = { optional = true, workspace = true }
datafusion-expr.workspace = true
datafusion-table-providers.workspace = true
runtime-datafusion = { path = '../runtime-datafusion', optional = true }
r2d2 = { optional = true, workspace = true }
duckdb = { optional = true, workspace = true }
futures.workspace = true
itertools = { optional = true, workspace = true }
url = { optional = true, workspace = true }
snafu.workspace = true
tracing.workspace = true


[features]
duckdb = [
    "datafusion-table-providers/duckdb",
    "dep:duckdb",
    "dep:r2d2"
]
cluster = ["dep:arrow", "dep:chrono", "dep:itertools", "dep:datafusion-datasource", "dep:object_store", "dep:runtime-datafusion", "dep:url"]

