[package]
name = "document_parse"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
docx-rs = { git = "https://github.com/spiceai/docx-rs", rev="2d86a60b58afb02b157f96b42a92626417e47f71"}
pdf-extract = { git = "https://github.com/spiceai/pdf-extract.git", rev = "3989f973c061cd805ba6fe905f14b01074844dfc" }
snafu.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["sync"] }
