[package]
name = "document_parse"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
docx-rs = { git = "https://github.com/spiceai/docx-rs", rev="508456cf36bbc1ae5f381d24b03f0a993703e3ee"}
pdf-extract = { git = "https://github.com/spiceai/pdf-extract", rev = "3ca5e2c904cdf5897f3d671e3b2c4b62b1612b0c" }
snafu.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["sync"] }
