[package]
description = "Spice OSS Flight Query Repl"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "flightrepl"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ansi_colors = { path = "../ansi_colors" }
arrow.workspace = true
arrow-flight = { workspace = true, features = ["flight-sql-experimental"] }
arrow-json.workspace = true
clap.workspace = true
flight_client = { path = "../flight_client" }
futures.workspace = true
prost.workspace = true
reqwest.workspace = true
rustyline = { version = "17.0.2", features = [
  "custom-bindings",
  "with-dirs",
  "with-file-history",
  "derive",
] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["process"] }
tonic = { workspace = true, features = [
  "transport",
  "tls-ring",
  "tls-native-roots",
] }
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
winver = "1.0.0"

[dev-dependencies]
insta.workspace = true
regex.workspace = true
