[package]
name = "google-genai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
snafu.workspace = true
futures.workspace = true
bytes.workspace = true
