[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "iceberg-aws-sdk"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
async-trait.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-runtime = "1.5.10"
aws-sdk-s3 = "1.101.0"
aws-smithy-runtime = "1.8.6"
aws-smithy-runtime-api = "1.8.7"
iceberg.workspace = true
reqwest.workspace = true
snafu.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
aws-sdk-cognitoidentity = "1.80.0"
aws-sdk-cognitoidentityprovider = "1.92.0"
tempfile.workspace = true
