# This crate is excluded from the workspace because it requires system libnfs library.
# Build with: cargo build -p libnfs --manifest-path crates/libnfs/Cargo.toml
[package]
name = "libnfs"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Safe Rust bindings to libnfs C library for NFS client operations"
license = "Apache-2.0"

[dependencies]
nix = { version = "0.30", features = ["fs"] }
snafu = "0.8.6"

[build-dependencies]
bindgen = "0.71.1"
