[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "llms"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
snafu.workspace = true

async-openai.workspace = true
async-stream.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-bedrockruntime = "1.55.0"
bytes.workspace = true
futures = { workspace = true }
governor.workspace = true
hf-hub.workspace = true
insta = { workspace = true, features = ["filters"] }
regex = "1.10.4"
reqwest.workspace = true
reqwest-eventsource = "0.6.0"
schemars.workspace = true
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokenizers = "0.21.2"
tokio.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
util = { path = "../util" }

## For Chunking
text-splitter = { git = "https://github.com/spiceai/text-splitter.git", rev = "58f9c21006e01e5e968c5de80a0398b3f5ec439a", features = [
    "markdown",
    "tokenizers",
    "tiktoken-rs",
] }

pulldown-cmark = "0.13.0"
tiktoken-rs = "0.6.0"

mistralrs = { git = "https://github.com/spiceai/mistral.rs", rev = "cf3749e243ebdd2d9dfa1b895261147ff9ba64e3", optional = true }
mistralrs-core = { git = "https://github.com/spiceai/mistral.rs", rev = "cf3749e243ebdd2d9dfa1b895261147ff9ba64e3", package = "mistralrs-core", optional = true }
rand = "0.9.1"

tei_backend = { package = "text-embeddings-backend", git = "https://github.com/spiceai/text-embeddings-inference.git", optional = true, rev = "ca078993e4597172dcbf5857d846be81c6679e4f", features = [
    "candle",
] }

tei_backend_core = { package = "text-embeddings-backend-core", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "ca078993e4597172dcbf5857d846be81c6679e4f", optional = true }
tei_candle = { package = "text-embeddings-backend-candle", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "ca078993e4597172dcbf5857d846be81c6679e4f", optional = true }
tei_core = { package = "text-embeddings-core", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "ca078993e4597172dcbf5857d846be81c6679e4f", optional = true }

cudarc = { version = "0.12.2", optional = true, features = [
    "cuda-version-from-build-system",
] }
either = "1.15.0"
indexmap.workspace = true
tempfile.workspace = true
token_provider = { path = "../token_provider" }

[dev-dependencies]
anyhow = "1.0.86"
dotenvy.workspace = true
insta.workspace = true
jsonpath-rust = "0.7.3"
paste.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[features]
cuda = [
    "tei_backend/cuda",
    "tei_candle/cuda",
    "mistralrs-core/cuda",
    "mistralrs-core/flash-attn",
    "mistralrs/cuda",
    "mistralrs/flash-attn",
    "cudarc/cuda-version-from-build-system",
]
local_embed = [
    "dep:tei_backend",
    "dep:tei_backend_core",
    "dep:tei_candle",
    "dep:tei_core",
]
local_llm = ["dep:mistralrs", "dep:mistralrs-core"]
metal = [
    "tei_backend/metal",
    "tei_candle/metal",
    "mistralrs-core/metal",
    "mistralrs/metal",
]

default = ["local_llm", "local_embed"]
