[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "llms"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
snafu.workspace = true

async-openai.workspace = true
async-stream.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-bedrockruntime.workspace = true
aws-smithy-types.workspace = true
bytes.workspace = true
cache = { path = "../cache" }
chunking = { path = "../chunking" }
futures = { workspace = true }
google-genai = { path = "../google-genai" }
governor.workspace = true

hf-hub.workspace = true
insta = { workspace = true, features = ["filters"] }
itertools.workspace = true
regex.workspace = true
reqwest.workspace = true
reqwest-eventsource = "0.6.0"
runtime-rate-control = { path = "../runtime-rate-control" }
schemars.workspace = true
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
spicepod = { path = "../spicepod" }
tokenizers.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
util = { path = "../util" }

mistralrs = { git = "https://github.com/spiceai/mistral.rs", rev = "cf3749e243ebdd2d9dfa1b895261147ff9ba64e3", optional = true }
mistralrs-core = { git = "https://github.com/spiceai/mistral.rs", rev = "cf3749e243ebdd2d9dfa1b895261147ff9ba64e3", package = "mistralrs-core", optional = true }
rand.workspace = true

tei_backend = { package = "text-embeddings-backend", git = "https://github.com/spiceai/text-embeddings-inference.git", optional = true, rev = "58b44fbbbde55a6ea33c8d0b4b9504942405c481", features = [
    "candle",
] }

tei_backend_core = { package = "text-embeddings-backend-core", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "58b44fbbbde55a6ea33c8d0b4b9504942405c481", optional = true }
tei_candle = { package = "text-embeddings-backend-candle", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "58b44fbbbde55a6ea33c8d0b4b9504942405c481", optional = true }
tei_core = { package = "text-embeddings-core", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "58b44fbbbde55a6ea33c8d0b4b9504942405c481", optional = true }

cudarc = { version = "0.12.2", optional = true, features = [
    "cuda-version-from-build-system",
] }
either = "1.15.0"
indexmap.workspace = true
tempfile.workspace = true
token_provider = { path = "../token_provider" }

model2vec-rs = { git = "https://github.com/spiceai/model2vec-rs.git", rev = "dd0beab3810aebacb716d4ab6d38455e74499d13", optional = true }

[dev-dependencies]
anyhow.workspace = true
aws-credential-types.workspace = true
aws-sdk-credential-bridge = { path = "../aws-sdk-credential-bridge" }
dotenvy.workspace = true
insta = {workspace = true, features = ["json"] }
jsonpath-rust = "0.7.3"
paste.workspace = true
rstest = "0.26.1"
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[features]
cuda = [
    "tei_backend/cuda",
    "tei_candle/cuda",
    "mistralrs-core/cuda",
    "mistralrs-core/flash-attn",
    "mistralrs/cuda",
    "mistralrs/flash-attn",
    "cudarc/cuda-version-from-build-system",
]
local_embed = [
    "dep:tei_backend",
    "dep:tei_backend_core",
    "dep:tei_candle",
    "dep:tei_core",
    "dep:model2vec-rs",
]
local_llm = ["dep:mistralrs", "dep:mistralrs-core"]
metal = [
    "tei_backend/metal",
    "tei_candle/metal",
    "mistralrs-core/metal",
    "mistralrs/metal",
]

default = ["local_llm", "local_embed"]
