[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "ns_lookup"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
hickory-resolver = "0.25.2"
url.workspace = true
