[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "package"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
object_store.workspace = true
tracing.workspace = true
snafu.workspace = true
serde.workspace = true
yaml = { path = "../yaml" }
spicepod = { path = "../spicepod" }
zip = "7.2.0"
bytes.workspace = true
futures.workspace = true