[package]
description = "Acceleration support for the Spice runtime"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "runtime-acceleration"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
arrow.workspace = true
arrow-schema = { workspace = true, features = ["serde"] }
async-trait.workspace = true
aws-sdk-credential-bridge = { path = "../aws-sdk-credential-bridge" }
bytes.workspace = true
chrono.workspace = true
datafusion.workspace = true
duckdb = { workspace = true, features = [
    "bundled",
    "r2d2",
    "extensions-full",
], optional = true }
fundu.workspace = true
futures.workspace = true
object_store.workspace = true
opentelemetry.workspace = true
runtime-parameters = { path = "../runtime-parameters" }
runtime-secrets = { path = "../runtime-secrets" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snafu.workspace = true
spicepod = { path = "../spicepod" }
tar = "0.4"
tempfile.workspace = true
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true
url.workspace = true
util = { path = "../util" }

[features]
default = []
duckdb = ["dep:duckdb"]
snapshots = []
sqlite = []
turso = []

[dev-dependencies]
anyhow = { workspace = true }
aws-sdk-credential-bridge = { path = "../aws-sdk-credential-bridge" }
criterion = { version = "0.7", features = ["async_tokio", "html_reports"] }
futures.workspace = true
hex = "0.4"
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
uuid = { version = "1", features = ["v7"] }

[[bench]]
harness = false
name = "snapshot_operations"
